<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@drawable/round_button"
    android:paddingTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="#FFFFFF"
            android:padding="5dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/labelRoomNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="#000000"
                    android:gravity="left"
                    android:padding="5dp"
                    android:text="@string/room_number"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/roomNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="#000000"
                    android:gravity="left"
                    android:padding="5dp"
                    android:text="TextView"
                    android:textColor="#FFFFFF" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/labelCoolingSystem"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="#000000"
                    android:gravity="left"
                    android:padding="5dp"
                    android:text="@string/cooling_system"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/coolingSystem"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="#000000"
                    android:gravity="left"
                    android:padding="5dp"
                    android:text="TextView"
                    android:textColor="#FFFFFF" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/labelWashroomType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="#000000"
                    android:gravity="left"
                    android:padding="5dp"
                    android:text="@string/washroom_type"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/washroomType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="#000000"
                    android:gravity="left"
                    android:padding="5dp"
                    android:text="TextView"
                    android:textColor="#FFFFFF" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/labelDharmashalaTimings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="#000000"
                    android:gravity="left"
                    android:padding="5dp"
                    android:text="@string/dharmashala_timings"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/dharmashalaTimings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="#000000"
                    android:gravity="left"
                    android:padding="5dp"
                    android:text="TextView"
                    android:textColor="#FFFFFF" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/bookRoom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:padding="2dp"
            android:text="@string/book_room" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>